--- a/index.html
+++ b/index.html
@@ -1,11 +1,73 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-  <head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <meta name="" content="">
-  <title></title>
-  </head>
-  <body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Projeto Pindorama</title>
+  <link rel="stylesheet" href="/css/style.css">
+  <script src="/js/script.js"></script>
+  <style>
+    .center{
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 50%;
+    }
+  </style>
+</head>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top " id="mainNav" style="background-color: #f8f8ff;">
+    <a class="navbar-brand js-scroll-trigger"
+      href="#"><strong>projeto-pindorama.neocities.org</strong> </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+      aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#sobre"><strong
+              style="font-size: 20px;">Sobre</strong></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#downloads"><strong
+              style="font-size: 20px;">Downloads</strong></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#servidores"><strong
+              style="font-size: 20px;">Servidores</strong></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#maillists"><strong
+              style="font-size: 20px;">Maillists</strong></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#documentacao"><strong
+              style="font-size: 20px;">Documentação</strong></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#quem-somos"><strong style="font-size: 20px;">Quem
+              somos?</strong></a>
+        </li>
+      </ul>
+    </div>
+  </nav> <br> 
+  <div id="principal" style="display: flex; padding-top: 60px;">
+    <div class="card" style="width: 18rem;">
+      <img class="card-img-top" src="assest/logo_pindorama.png">
+      <div class="card-body">
+        <h5 class="card-title">Carros-chefes:</h5>
+        <a href="#">> Kurumin OpenLinux;</a> <br>
+        <a href="#">> Otto-PKG</a> <br> <br>
+        <h5 class="card-title">Aprenda sobre:</h5>
+        <a href="#">> Unix Básico</a> <br>
+        <a href="#">> Shell Script</a> <br>
 
-  </body>
+      </div>
+    </div>
+    <div class="center" >
+      <img src="/assest/banner.png" alt="" class="img-fluid">
+    </div>
+  </div>
+</body>
 </html>
