Obrigado Vitor e Ryan por tudo até agora!

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projeto Pindorama</title>
-  <link rel="stylesheet" href="/css/style.css">
-  <script src="/js/script.js"></script>
+  <link rel="stylesheet" href="./css/style.css">
+  <script src="./js/script.js"></script> <!-- Why? -->
   <style>
     .center{
       display: block;
@@ -15,7 +15,7 @@
     }
   </style>
 </head>
-<body>
+<body >
   <nav class="navbar navbar-expand-lg navbar-light fixed-top " id="mainNav" style="background-color: #f8f8ff;">
     <a class="navbar-brand js-scroll-trigger"
       href="#"><strong>projeto-pindorama.neocities.org</strong> </a>
@@ -57,17 +57,22 @@
       <img class="card-img-top" src="assest/logo_pindorama.png">
       <div class="card-body">
         <h5 class="card-title">Carros-chefes:</h5>
-        <a href="#">> Kurumin OpenLinux;</a> <br>
-        <a href="#">> Otto-PKG</a> <br> <br>
+        <a href="#">› Kurumin OpenLinux;</a> <br>
+        <a href="#">› Otto-PKG</a> <br> <br>
         <h5 class="card-title">Aprenda sobre:</h5>
-        <a href="#">> Unix Básico</a> <br>
-        <a href="#">> Shell Script</a> <br>
+        <a href="#">› Unix Básico</a> <br>
+        <a href="#">› Shell Script</a> <br>
 
       </div>
     </div>
-    <div class="center" >
-      <img src="/assest/banner.png" alt="" class="img-fluid">
+    <section>
+    <h1>Slogan do Pindorama super original</h1>
+    <img src="assest/banner.png" id="banner">
+    </section>
+    <div class="center">
     </div>
   </div>
+    <div class='texto-plano'>
+  </div>  
 </body>
 </html>
