--- a/index.html
+++ b/index.html
@@ -68,11 +68,21 @@
     <section>
     <h1>Slogan do Pindorama super original</h1>
     <img src="assest/banner.png" id="banner">
+    <div style="margin-top: 20px; margin-left:10px;">
+      <data>>>2020 08 15</data>
+      <h4>Só para garantir.</h4>
+      Pode código em C no grupo?
+      <pre>#!/bin/sh
+echo 'Foda, ainda não sei C, ao menos não o suficiente para fazer algo decente aqui.'</pre>
+      <data>>>2020 08 14</data>
+      <h4>Site finalmente funcional? Vamos saber agora.</h4>
+      <h5>Eh, pelo visto sim!</h5>
+      <pre>#!/bin/sh
+echo 'vou até comemorar em Shell aqui.'</pre>
+    </div>
     </section>
     <div class="center">
     </div>
   </div>
-    <div class='texto-plano'>
-  </div>  
 </body>
 </html>
