--- a/index.html
+++ b/index.html
@@ -66,19 +66,12 @@
       </div>
     </div>
     <section>
-    <h1>Slogan do Pindorama super original</h1>
+    <h1>Somos <u><b>o</b></u> projeto brasileiro</h1>
     <img src="assest/banner.png" id="banner">
     <div style="margin-top: 20px; margin-left:10px;">
-      <data>>>2020 08 15</data>
-      <h4>Só para garantir.</h4>
-      Pode código em C no grupo?
-      <pre>#!/bin/sh
-echo 'Foda, ainda não sei C, ao menos não o suficiente para fazer algo decente aqui.'</pre>
-      <data>>>2020 08 14</data>
-      <h4>Site finalmente funcional? Vamos saber agora.</h4>
-      <h5>Eh, pelo visto sim!</h5>
-      <pre>#!/bin/sh
-echo 'vou até comemorar em Shell aqui.'</pre>
+      <data>>>2020 08 22</data>
+      <h4>Novo site, depois de quase 1 ano com o mesmo...</h4>
+      <h5>ARTIGO QUE AINDA VOU ESCREVER SOBRE</h5>
     </div>
     </section>
     <div class="center">
