Copiados os conteúdos do Neocities para o repositório no GitHub.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projeto Pindorama</title>
-  <link rel="stylesheet" href="./css/style.css">
-  <script src="./js/script.js"></script> <!-- Why? -->
+  <link rel="stylesheet" href="./_css/style.css">
+  <script src="./_js/script.js"></script> <!-- Why? -->
   <style>
     .center{
       display: block;
@@ -54,7 +54,7 @@
   </nav> <br> 
   <div id="principal" style="display: flex; padding-top: 60px;">
     <div class="card" style="width: 18rem;">
-      <img class="card-img-top" src="assest/logo_pindorama.png">
+      <img class="card-img-top" src="./_imagens/logo_pindorama.png">
       <div class="card-body">
         <h5 class="card-title">Carros-chefes:</h5>
         <a href="#">› Kurumin OpenLinux;</a> <br>
@@ -67,11 +67,10 @@
     </div>
     <section>
     <h1>Somos <u><b>o</b></u> projeto brasileiro</h1>
-    <img src="assest/banner.png" id="banner">
+    <img src="./_imagens/banner.png" id="banner">
     <div style="margin-top: 20px; margin-left:10px;">
-      <data>>>2020 08 22</data>
-      <h4>Novo site, depois de quase 1 ano com o mesmo...</h4>
-      <h5>ARTIGO QUE AINDA VOU ESCREVER SOBRE</h5>
+      <data>>>2020 11 11</data>
+      <h4><a href='https://projeto-pindorama.neocities.org/_arquivos/artigos/2020/Nov/NOVO_SITE.html'>Novo site, depois de quase 1 ano com o mesmo...</a></h4>
     </div>
     </section>
     <div class="center">
