--- a/_arquivos/licencas/copycenter/CALDERA_LICENSE.html
+++ b/_arquivos/licencas/copycenter/CALDERA_LICENSE.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Caldera License</title>
-  <link rel="stylesheet" href="../../css/style.css">
+  <link rel="stylesheet" href="../../../_css/style.css">
   <style>
     .center{
       display: block;
@@ -17,17 +17,17 @@
 <h2>Caldera License (ou apenas "Caldera")</h2>
 <data>Por Caldera International, Inc. em 23 de Janeiro de 2002</data><br />
 <data>Adaptado de <a href='http://abre.ai/caldera-international-license-original'>www(dot)tuhs(dot)org</a> por Luiz Antônio Rangel em 22 de Outubro de 2020</data>
-<p>Copyright(C) <tt>(AUTHOR)</tt>. <tt>XXXX-XXXX</tt>. All rights reserved.</p>
+<p>Copyright(C) <tt>(AUTHOR)</tt>, <tt>XXXX-XXXX</tt>. All rights reserved.</p>
 <p>Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:</p>
 <p>Redistributions of source code and documentation must retain the above copyright notice, this list of conditions and the following disclaimer.</p>
 <p>Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.</p>
 <p>All advertising materials mentioning features or use of this software must display the following acknowledgement:</p>
 <p>This product includes software developed or owned by <tt>(AUTHOR et PROJECT)</tt>.</p>
 <p>Neither the name of <tt>(AUTHOR, PROJECT)</tt> nor the names of other contributors may be used to endorse or promote products derived from this software without specific prior written permission.</p>
-<p>USE OF THE SOFTWARE PROVIDED FOR UNDER THIS LICENSE BY <tt>(AUTHOR et PROJECT)</tt> 
+<p>USE OF THE SOFTWARE PROVIDED FOR UNDER THIS LICENSE BY <tt>(AUTHOR)</tt> 
 AND CONTRIBUTORS ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
-PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL CALDERA INTERNATIONAL, INC. BE LIABLE FOR
+PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL <tt>(AUTHOR)</tt> (NOR <tt>(PROJECT)</tt>) BE LIABLE FOR
 ANY DIRECT, INDIRECT INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
 (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF
 USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
