Mudança no nome do projeto.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     }
   </style>
 </head>
-<body >
+<body>
   <nav class="navbar navbar-expand-lg navbar-light fixed-top " id="mainNav" style="background-color: #f8f8ff;">
     <a class="navbar-brand js-scroll-trigger"
       href="#"><strong>projeto-pindorama.neocities.org</strong> </a>
@@ -57,7 +57,7 @@
       <img class="card-img-top" src="./_imagens/logo_pindorama.png">
       <div class="card-body">
         <h5 class="card-title">Carros-chefes:</h5>
-        <a href="#">› Kurumin OpenLinux;</a> <br>
+        <a href="#">› Copacabana OpenLinux;</a> <br>
         <a href="#">› Otto-PKG</a> <br> <br>
         <h5 class="card-title">Aprenda sobre:</h5>
         <a href="#">› Unix Básico</a> <br>
@@ -69,7 +69,7 @@
     <h1>Somos <u><b>o</b></u> projeto brasileiro</h1>
     <img src="./_imagens/banner.png" id="banner">
     <div style="margin-top: 20px; margin-left:10px;">
-      <data>>>2020 11 11</data>
+      <data>››2020 11 11</data>
       <h4><a href='https://projeto-pindorama.neocities.org/_arquivos/artigos/2020/Nov/NOVO_SITE.html'>Novo site, depois de quase 1 ano com o mesmo...</a></h4>
     </div>
     </section>
