Adicionadas páginas para os carros-chefes.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     }
   </style>
 </head>
-<body>
+<body >
   <nav class="navbar navbar-expand-lg navbar-light fixed-top " id="mainNav" style="background-color: #f8f8ff;">
     <a class="navbar-brand js-scroll-trigger"
       href="#"><strong>projeto-pindorama.neocities.org</strong> </a>
@@ -38,30 +38,26 @@
               style="font-size: 20px;">Servidores</strong></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#maillists"><strong
+          <a class="nav-link js-scroll-trigger" href="mailto:pindorama-users@googlegroups.com"><strong
               style="font-size: 20px;">Maillists</strong></a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#documentacao"><strong
               style="font-size: 20px;">Documentação</strong></a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#quem-somos"><strong style="font-size: 20px;">Quem
-              somos?</strong></a>
-        </li>
       </ul>
     </div>
-  </nav> <br> 
+  </nav> <br>
   <div id="principal" style="display: flex; padding-top: 60px;">
     <div class="card" style="width: 18rem;">
       <img class="card-img-top" src="./_imagens/logo_pindorama.png">
       <div class="card-body">
         <h5 class="card-title">Carros-chefes:</h5>
-        <a href="#">› Copacabana OpenLinux;</a> <br>
-        <a href="#">› Otto-PKG</a> <br> <br>
-        <h5 class="card-title">Aprenda sobre:</h5>
+        <a href="./_projetos/copacabana.html">› Copacabana OpenLinux;</a> <br>
+        <a href="./_projetos/otto.html">› Otto-PKG</a> <br> <br>
+        <!-- <h5 class="card-title">Aprenda sobre:</h5>
         <a href="#">› Unix Básico</a> <br>
-        <a href="#">› Shell Script</a> <br>
+        <a href="#">› Shell Script</a> <br> -->
 
       </div>
     </div>
