--- a/_arquivos/licencas/copycenter/MIT-X11_LICENSE.html
+++ b/_arquivos/licencas/copycenter/MIT-X11_LICENSE.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Caldera License</title>
+  <title>MIT-X11 License</title>
   <link rel="stylesheet" href="../../../_css/style.css">
   <style>
     .center{
