Movido do Neocities para um servidor próprio.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projeto Pindorama</title>
-  <link rel="stylesheet" href="./_css/style.css">
-  <script src="./_js/script.js"></script> <!-- Why? -->
+  <link rel="stylesheet" href="./pindorama/_css/style.css">
+  <script src="./pindorama/_js/script.js"></script> <!-- Why? -->
   <style>
     .center{
       display: block;
@@ -18,7 +18,7 @@
 <body >
   <nav class="navbar navbar-expand-lg navbar-light fixed-top " id="mainNav" style="background-color: #f8f8ff;">
     <a class="navbar-brand js-scroll-trigger"
-      href="#"><strong>projeto-pindorama.neocities.org</strong> </a>
+       href="#"><strong>pindorama.tk</strong> </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
       aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -50,23 +50,25 @@
   </nav> <br>
   <div id="principal" style="display: flex; padding-top: 60px;">
     <div class="card" style="width: 18rem;">
-      <img class="card-img-top" src="./_imagens/logo_pindorama.png">
+      <img class="card-img-top" src="./pindorama/_imagens/logo_pindorama.png">
       <div class="card-body">
         <h5 class="card-title">Carros-chefes:</h5>
-        <a href="./_projetos/copacabana.html">› Copacabana OpenLinux;</a> <br>
-        <a href="./_projetos/otto.html">› Otto-PKG</a> <br> <br>
-        <!-- <h5 class="card-title">Aprenda sobre:</h5>
+        <a href="./pindorama/_projetos/copacabana.html">› Copacabana OpenLinux;</a> <br>
+        <a href="./pindorama/_projetos/otto.html">› Otto-PKG</a> <br> <br>
+	<br>
+	<!-- <h5 class="card-title">Aprenda sobre:</h5>
         <a href="#">› Unix Básico</a> <br>
         <a href="#">› Shell Script</a> <br> -->
+        <a href="http://www.acme.com/software/thttpd/"><img src="./pindorama/_imagens/thttpd_powered_2.gif" width="140" height="60"></a>
 
       </div>
     </div>
     <section>
     <h1>Somos <u><b>o</b></u> projeto brasileiro</h1>
-    <img src="./_imagens/banner.png" id="banner">
+    <img src="./pindorama/_imagens/banner.png" id="banner">
     <div style="margin-top: 20px; margin-left:10px;">
       <data>››2020 11 11</data>
-      <h4><a href='https://projeto-pindorama.neocities.org/_arquivos/artigos/2020/Nov/NOVO_SITE.html'>Novo site, depois de quase 1 ano com o mesmo...</a></h4>
+      <h4><a href='./pindorama/_arquivos/artigos/2020/Nov/NOVO_SITE.html'>Novo site, depois de quase 1 ano com o mesmo...</a></h4>
     </div>
     </section>
     <div class="center">
