Começar a escrever novo artigo.
A FAZER: Adaptar o repositório para ficar mais parecido com a estrutura do servidor.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               style="font-size: 20px;">Sobre</strong></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#downloads"><strong
+          <a class="nav-link js-scroll-trigger" href="./pindorama/_arquivos/downloads/"><strong
               style="font-size: 20px;">Downloads</strong></a>
         </li>
         <li class="nav-item">
@@ -67,6 +67,8 @@
     <h1>Somos <u><b>o</b></u> projeto brasileiro</h1>
     <img src="./pindorama/_imagens/banner.png" id="banner">
     <div style="margin-top: 20px; margin-left:10px;">
+      <data>››2020 12 31</data>
+      <h4><a href='./pindorama/_arquivos/artigos/2020/Dec/NOVO_HOST.html'>Mudança de host: finalmente!</a></h4>
       <data>››2020 11 11</data>
       <h4><a href='./pindorama/_arquivos/artigos/2020/Nov/NOVO_SITE.html'>Novo site, depois de quase 1 ano com o mesmo...</a></h4>
     </div>
