--- a/index.html
+++ b/index.html
@@ -1,80 +1,78 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projeto Pindorama</title>
-  <link rel="stylesheet" href="./pindorama/_css/style.css">
-  <script src="./pindorama/_js/script.js"></script> <!-- Why? -->
-  <style>
-    .center{
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      width: 50%;
-    }
-  </style>
-</head>
-<body >
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top " id="mainNav" style="background-color: #f8f8ff;">
-    <a class="navbar-brand js-scroll-trigger"
-       href="#"><strong>pindorama.tk</strong> </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-      aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#sobre"><strong
-              style="font-size: 20px;">Sobre</strong></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="./pindorama/_arquivos/downloads/"><strong
-              style="font-size: 20px;">Downloads</strong></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#servidores"><strong
-              style="font-size: 20px;">Servidores</strong></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="mailto:pindorama-users@googlegroups.com"><strong
-              style="font-size: 20px;">Maillists</strong></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#documentacao"><strong
-              style="font-size: 20px;">Documentação</strong></a>
-        </li>
-      </ul>
-    </div>
-  </nav> <br>
-  <div id="principal" style="display: flex; padding-top: 60px;">
-    <div class="card" style="width: 18rem;">
-      <img class="card-img-top" src="./pindorama/_imagens/logo_pindorama.png">
-      <div class="card-body">
-        <h5 class="card-title">Carros-chefes:</h5>
-        <a href="./pindorama/_projetos/copacabana.html">› Copacabana OpenLinux;</a> <br>
-        <a href="./pindorama/_projetos/otto.html">› Otto-PKG</a> <br> <br>
-	<br>
-	<!-- <h5 class="card-title">Aprenda sobre:</h5>
-        <a href="#">› Unix Básico</a> <br>
-        <a href="#">› Shell Script</a> <br> -->
-        <a href="http://www.acme.com/software/thttpd/"><img src="./pindorama/_imagens/thttpd_powered_2.gif" width="140" height="60"></a>
+<!doctype html>
+<html lang="pt-br">
 
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/style.css">
+  <title>Projeto Pindorama</title>
+</head>
+
+<body>
+  <header>
+    <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
+      <a class="navbar-brand" href="#"><strong>pindorama.tk</strong></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Sobre</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Downloads</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Servidores</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="mailto:pindorama-users@googlegroups.com">Maillist</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Documentação</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+
+  <div id="principal">
+    <div class="card" style="width: 15rem;">
+      <img class="card-img-top" src="./img/logo_pindorama.png" alt="Pindorama Logo">
+      <div class="card-body">
+        <h5 class="card-title">Carros chefe:</h5>
+        <p class="card-text"><a href="#" target="_blank" rel="noopener noreferrer">> Copacabana OpenLinux;</a> <br> <a
+            href="./projetos/otto.html" target="_blank" rel="noopener noreferrer">> Otto-PKG</a></p>
+        <img src="./img/thttpd_powered_2.gif" alt="" width="120px">
       </div>
     </div>
-    <section>
-    <h1>Somos <u><b>o</b></u> projeto brasileiro</h1>
-    <img src="./pindorama/_imagens/banner.png" id="banner">
-    <div style="margin-top: 20px; margin-left:10px;">
-      <data>››2020 12 31</data>
-      <h4><a href='./pindorama/_arquivos/artigos/2020/Dec/NOVO_HOST.html'>Mudança de host: finalmente!</a></h4>
-      <data>››2020 11 11</data>
-      <h4><a href='./pindorama/_arquivos/artigos/2020/Nov/NOVO_SITE.html'>Novo site, depois de quase 1 ano com o mesmo...</a></h4>
-    </div>
-    </section>
-    <div class="center">
+    <div id="letreiro">
+      <h1 id="pindorama-letreiro">Somos <span id="sublinhado">o</span> projeto brasileiro</h1>
+
+      <div id="banner">
+        <img src="./img/banner.png" alt="" width="999px" class="img-fluid">
+      </div>
     </div>
   </div>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+    integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
