Implementação de uma linha do tempo

--- a/index.html
+++ b/index.html
@@ -57,12 +57,79 @@
     </div>
     <div id="letreiro">
       <h1 id="pindorama-letreiro">Somos <span id="sublinhado">o</span> projeto brasileiro</h1>
-
       <div id="banner">
         <img src="./img/banner.png" alt="" width="999px" class="img-fluid">
       </div>
+      <!--Começo timeline-->
+      <div class="container">
+        <div class="timeline">
+          <div class="timeline-month">
+            Janeiro, 2021
+          </div>
+          <div class="timeline-section">
+            <div class="timeline-date">
+              07, quinta-feira
+            </div>
+            <div class="row">
+              <!--Começo primeira da linha-->
+              <div class="col-sm-4">
+                <div class="timeline-box">
+                  <div class="box-title">
+                    <i class="fa fa-asterisk text-success" aria-hidden="true"></i> Modificação no site
+                  </div>
+                  <div class="box-content">
+                    <div class="box-item"><strong>Detalhes:</strong>: Implementação de uma linha do tempo</div>
+                  </div>
+                  <div class="box-footer">- Vitor</div>
+                </div>
+              </div>
+              <!--Fim primeira da linha-->
+
+              <!--Começo segunda da linha
+              <div class="col-sm-4">
+                <div class="timeline-box">
+                  <div class="box-title">
+                    <i class="fa fa-pencil text-info" aria-hidden="true"></i> Job Edited
+                  </div>
+                  <div class="box-content">
+                    <div class="box-item"><strong>Project Manager</strong>: Marlyn</div>
+                    <div class="box-item"><strong>Supervisor</strong>: Carol</div>
+                  </div>
+                  <div class="box-footer">- Tyler</div>
+                </div>
+              </div>
+              Fim segunda da linha-->
+            </div>
+          </div>
+          <!--Fim-->
+          <div class="timeline-month">
+            Novembro, 2020
+          </div>
+          <div class="timeline-section">
+            <div class="timeline-date">
+                11, quarta-feira
+            </div>
+            <div class="row">
+              <!--Começo primeira da linha-->
+              <div class="col-sm-4">
+                <div class="timeline-box">
+                  <div class="box-title">
+                    <i class="fa fa-asterisk text-success" aria-hidden="true"></i> Modificação no site
+                  </div>
+                  <div class="box-content">
+                    <div class="box-item"><strong>Detalhes:</strong>: Novo website, depois de quase 1 ano com o mesmo...</div>
+                  </div>
+                  <div class="box-footer">- Luiz</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
+
+
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
