--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="./js/script.min.js"></script>
   <title>Projeto Pindorama</title>
@@ -127,7 +128,19 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> <br><br><br>
+  <div id="rodape">
+    <div class="container">
+      <div id="rodape-title">
+        <span>Projeto Pindorama</span> <a href="https://github.com/Projeto-Pindorama" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
+      </div>
+      <div class="rodape-desenvolvedores">
+        <span><strong class="rodape-desenvolvedores">Copyright: </strong> Vitor Souza <a href="https://github.com/vit0rr" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a></span> <br>
+        <span><strong class="rodape-desenvolvedores">Webmaster: Luiz Anônio</strong> (luiz.antonio.rangel@bol.com.br)</span>
+        
+      </div>
+    </div>
+</div>
 
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
