--- a/index.html
+++ b/index.html
@@ -1,160 +1,57 @@
-<!doctype html>
-<html lang="pt-br">
-
+<!DOCTYPE html>
+<html lang="pt-BR">
 <head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pindorama</title>
     <link rel="stylesheet" href="./css/style.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-  <script src="./js/script.min.js"></script>
-  <title>Projeto Pindorama</title>
 </head>
-
 <body>
-  <header>
-    <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
-      <a class="navbar-brand" href="#"><strong>pindorama.tk</strong></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Sobre</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Downloads</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Servidores</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="mailto:pindorama-users@googlegroups.com">Maillist</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Documentação</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-
-  <div id="principal">
-    <div class="card" style="width: 15rem;">
-      <img class="card-img-top" src="./img/logo_pindorama.png" alt="Pindorama Logo">
-      <div class="card-body">
-        <h5 class="card-title">Carros chefe:</h5>
-        <p class="card-text"><a href="#" target="_blank" rel="noopener noreferrer">> Copacabana OpenLinux;</a> <br> <a
-            href="./projetos/otto.html" target="_blank" rel="noopener noreferrer">> Otto-PKG</a></p>
-        <img src="./img/thttpd_powered_2.gif" alt="" width="120px">
-      </div>
-    </div>
-    <div id="letreiro">
-      <h1 id="pindorama-letreiro">Somos <span id="sublinhado">o</span> projeto brasileiro</h1>
-      <div id="banner">
-        <img src="./img/banner.png" alt="" width="999px" class="img-fluid">
-      </div>
-      <!--Começo timeline-->
-      <div class="container">
-        <div class="timeline">
-          <div class="timeline-month">
-            Janeiro, 2021
-          </div>
-          <div class="timeline-section">
-            <div class="timeline-date">
-              07, quinta-feira
-            </div>
-            <div class="row">
-              <!--Começo primeira da linha-->
-              <div class="col-sm-4">
-                <div class="timeline-box">
-                  <div class="box-title">
-                    <i class="fa fa-asterisk text-success" aria-hidden="true"></i> Modificação no site
-                  </div>
-                  <div class="box-content">
-                    <div class="box-item"><strong>Detalhes:</strong>: Implementação de uma linha do tempo</div>
-                  </div>
-                  <div class="box-footer">- Vitor</div>
+    <header>
+        <div id="navbar">
+            <nav>
+                <div class="left">
+                    <a href="#">Fórum</a> |
+                    <a href="#">Github</a> |
+                    <a id="responsiveNavLateral" href="#">Copacabana Open Linix</a> <span id="responsiveNavLateral">|</span>
+                    <a id="responsiveNavLateral" href="#">Otto-PKG</a> <span id="responsiveNavLateral">|</span>
                 </div>
-              </div>
-              <!--Fim primeira da linha-->
-
-              <!--Começo segunda da linha
-              <div class="col-sm-4">
-                <div class="timeline-box">
-                  <div class="box-title">
-                    <i class="fa fa-pencil text-info" aria-hidden="true"></i> Job Edited
-                  </div>
-                  <div class="box-content">
-                    <div class="box-item"><strong>Project Manager</strong>: Marlyn</div>
-                    <div class="box-item"><strong>Supervisor</strong>: Carol</div>
-                  </div>
-                  <div class="box-footer">- Tyler</div>
-                </div>
-              </div>
-              Fim segunda da linha-->
-            </div>
-          </div>
-          <!--Fim-->
-          <div class="timeline-month">
-            Novembro, 2020
-          </div>
-          <div class="timeline-section">
-            <div class="timeline-date">
-                11, quarta-feira
-            </div>
-            <div class="row">
-              <!--Começo primeira da linha-->
-              <div class="col-sm-4">
-                <div class="timeline-box">
-                  <div class="box-title">
-                    <i class="fa fa-asterisk text-success" aria-hidden="true"></i> Modificação no site
-                  </div>
-                  <div class="box-content">
-                    <div class="box-item"><strong>Detalhes:</strong>: Novo website, depois de quase 1 ano com o mesmo...</div>
-                  </div>
-                  <div class="box-footer">- Luiz</div>
-                </div>
-              </div>
-            </div>
-          </div>
+            </nav>
         </div>
-      </div>
-    </div>
-  </div> <br><br><br>
-  <div id="rodape">
-    <div class="container">
-      <div id="rodape-title">
-        <span>Projeto Pindorama</span> <a href="https://github.com/Projeto-Pindorama" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
-      </div>
-      <div class="rodape-desenvolvedores">
-        <span><strong class="rodape-desenvolvedores">Copyright: </strong> Vitor Souza <a href="https://github.com/vit0rr" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a></span> <br>
-        <span><strong class="rodape-desenvolvedores">Webmaster: Luiz Anônio</strong> (luiz.antonio.rangel@bol.com.br)</span>
-        
-      </div>
-    </div>
-</div>
-
-
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-    integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-    crossorigin="anonymous"></script>
+        <div id="logo-section">
+            <a href="./index.html">pindorama.tk</a>
+            <span id="subtitle">Somos <span class="negrito sublinhado">o</span> projeto brasileiro</span>
+        </div>
+    </header>
+    <nav id="NavLateral">
+        <div id="responsiveLinks">
+            <img id="logo-pindorama" src="./img/logo_pindorama.png" alt="Logo Pindoama" width="255px">
+            <p class="NavLateralTitulo">Links:</p>
+            <ul>
+                <li><a href="#">>> Copacabana Open Linux</a></li>
+                <li><a href="#">>> Otto-PKG</a></li>
+                <!--<li><a href="#">Link</a></li>
+                <li><a href="#">Link</a></li>
+                <li><a href="#">Link</a></li>
+                <li><a href="#">Link</a></li>
+                <li><a href="#">Link</a></li>
+                <li><a href="#">Link</a></li>
+                <li><a href="#">Link</a></li>
+                <li><a href="#">Link</a></li>
+                <li><a href="#">Link</a></li>-->
+            </ul>
+        </div>
+    </nav>
+    <article>
+        <h1 id="ArticleTitle">O que é o Projeto Pindorama?</h1>
+        <div id="pArticle">
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea fugit dolores quo quod placeat veritatis debitis tenetur eum officiis dolor, cum voluptates libero ad, cupiditate ipsam eveniet repellendus vero laudantium rem. Nihil explicabo dolorum doloremque delectus fuga iure blanditiis temporibus.
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus odit aspernatur sunt perspiciatis ullam nulla soluta omnis nesciunt, laudantium aliquid.
+            </p>
+        </div>
+    </article>
 </body>
-
 </html>
