Mudança de fonte
Fonte padrão para Helvetica

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pindorama</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <header>
         <div id="navbar">
@@ -13,13 +15,14 @@
                 <div class="left">
                     <a href="#">Fórum</a> |
                     <a href="#">Github</a> |
-                    <a id="responsiveNavLateral" href="#">Copacabana Open Linix</a> <span id="responsiveNavLateral">|</span>
+                    <a id="responsiveNavLateral" href="#">Copacabana Open Linix</a> <span
+                        id="responsiveNavLateral">|</span>
                     <a id="responsiveNavLateral" href="#">Otto-PKG</a> <span id="responsiveNavLateral">|</span>
                 </div>
             </nav>
         </div>
         <div id="logo-section">
-            <a href="./index.html">pindorama.tk</a>
+            <a id="pindoramaTK" href="./index.html">pindorama.tk</a>
             <span id="subtitle">Somos <span class="negrito sublinhado">o</span> projeto brasileiro</span>
         </div>
     </header>
@@ -46,12 +49,16 @@
         <h1 id="ArticleTitle">O que é o Projeto Pindorama?</h1>
         <div id="pArticle">
             <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea fugit dolores quo quod placeat veritatis debitis tenetur eum officiis dolor, cum voluptates libero ad, cupiditate ipsam eveniet repellendus vero laudantium rem. Nihil explicabo dolorum doloremque delectus fuga iure blanditiis temporibus.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea fugit dolores quo quod placeat veritatis
+                debitis tenetur eum officiis dolor, cum voluptates libero ad, cupiditate ipsam eveniet repellendus vero
+                laudantium rem. Nihil explicabo dolorum doloremque delectus fuga iure blanditiis temporibus.
             </p>
             <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus odit aspernatur sunt perspiciatis ullam nulla soluta omnis nesciunt, laudantium aliquid.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus odit aspernatur sunt perspiciatis
+                ullam nulla soluta omnis nesciunt, laudantium aliquid.
             </p>
         </div>
     </article>
 </body>
+
 </html>
