Adição do link para Notícias

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
             <nav>
                 <div class="left">
                     <a href="/index.html">pindorama.tk</a> |
-		    <a href="http://pindorama.boards.net/">Fórum</a> |
+                    <a href="http://pindorama.boards.net/">Fórum</a> |
                     <a href="http://github.com/Projeto-Pindorama">Microsoft Github</a> |
+                    <a href="./noticias.html">Notícias</a>
                     <a id="responsiveNavLateral" href="">Copacabana OpenLinux</a> <span
                         id="responsiveNavLateral">|</span>
                     <a id="responsiveNavLateral" href="#">Otto-PKG</a> <span id="responsiveNavLateral">|</span>
@@ -44,15 +45,17 @@
                 <li><a href="#">Link</a></li>
                 <li><a href="#">Link</a></li>-->
             </ul>
-            
+
         </div>
     </nav>
     <article>
         <h1 id="ArticleTitle">Jornal dos Pindoramas</h1>
         <div id="pArticle">
             <ul>
-                <li><a href="./texto/artigos/2021/Mar/02.html">A maillist no Google Groups será extinta, migrem para o fórum</a></li>
-                <li><a href="./texto/artigos/2021/Mar/01.html">"O site está na baixa" mas o Copacabana está na alta</a></li>
+                <li><a href="./texto/artigos/2021/Mar/02.html">A maillist no Google Groups será extinta, migrem para o
+                        fórum</a></li>
+                <li><a href="./texto/artigos/2021/Mar/01.html">"O site está na baixa" mas o Copacabana está na alta</a>
+                </li>
             </ul>
         </div>
     </article>
