Adicionada a cor Berliner Blau para o cabeçalho de tabelas e renomeação do arquivo noticias.html para texto/template.html.

--- a/texto/template.html
+++ b/texto/template.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pindorama</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
     <header>
         <div id="navbar">
-            <nav>
+            <nav id="nav-noticias">
                 <div class="left">
+                    <a href="/index.html">pindorama.tk</a> |
                     <a href="http://pindorama.boards.net/">Fórum</a> |
                     <a href="http://github.com/Projeto-Pindorama">Microsoft Github</a> |
                     <a id="responsiveNavLateral" href="">Copacabana OpenLinux</a> <span
@@ -21,14 +22,14 @@
                 </div>
             </nav>
         </div>
-        <div id="logo-section">
+        <div id="logo-section-noticias">
             <a id="pindoramaTK" href="./index.html">pindorama.tk</a>
             <span id="subtitle">Somos <span class="negrito sublinhado">o</span> projeto brasileiro</span>
         </div>
     </header>
     <nav id="NavLateral">
         <div id="responsiveLinks">
-            <img id="logo-pindorama" src="./img/logo_pindorama.png" alt="Logo Pindoama" width="255px">
+            <img id="logo-pindorama" src="/img/logo_pindorama.png" alt="Logo Pindoama" width="255px">
             <p class="NavLateralTitulo">Links:</p>
             <ul>
                 <li><a href="#">>> Copacabana Open Linux</a></li>
@@ -43,9 +44,29 @@
                 <li><a href="#">Link</a></li>
                 <li><a href="#">Link</a></li>-->
             </ul>
-            
+
         </div>
     </nav>
+    <article>
+        <h1 id="ArticleTitle">Notícias</h1>
+        <div id="pArticle">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt, repudiandae?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, voluptate ratione recusandae quidem
+                harum aut accusantium quae, quasi, fuga sapiente veniam nihil veritatis voluptas? Numquam laborum atque
+                fugit? Pariatur odio doloremque natus nulla ullam nemo officiis mollitia. Minus deserunt laborum
+                reiciendis aut sequi! Earum explicabo sit, ea assumenda eius quae inventore doloribus error tempore quam
+                nihil, voluptate molestiae dolorem repudiandae ab ex, fugiat saepe sed voluptates quidem molestias
+                repellat neque eveniet reiciendis? Quis nihil velit rerum nisi, maxime cupiditate harum, blanditiis
+                ratione unde libero, eligendi repellendus laborum aspernatur mollitia excepturi at! Excepturi maxime
+                animi veniam, eaque dicta doloribus dolorum nulla, totam debitis repellendus necessitatibus. Nesciunt
+                aut iste obcaecati odit nam delectus dicta velit ipsum labore beatae recusandae quae, suscipit
+                dignissimos.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptates omnis distinctio est
+                alias ad pariatur harum aliquam asperiores nihil. Culpa, dignissimos repellat dolorem veritatis
+                similique blanditiis possimus deserunt provident consequuntur eum maiores unde officiis sunt fugiat
+                suscipit ullam libero explicabo vero amet quia nostrum ipsam velit. Corporis, maxime placeat!</p>
+        </div>
+    </article>
 </body>
 
 </html>
