Ajustes de responsividade

--- a/index.html
+++ b/index.html
@@ -46,23 +46,25 @@
                 <li><a href="#">Link</a></li>-->
             </ul>
             <p class="NavLateralTitulo">Links externos:</p>
-            <ul>
-                <li><a href="http://kernel.org"><img src="./img/linux.gif" height="31" width="88"></a></li>
-                <li><a href="http://www.acme.com/software/thttpd"><img src="./img/thttpd_powered_2.gif" height="31" width="88"></a></li>
-                <li><a href="http://github.com/hfiref0x/LightFTP"><img src="./img/lightftp.png" height="31" width="88"></a></li>
-                <li><a href="http://standwithhk.org"><img src="./img/WESTANDWITHHK.PNG" height="31" width="88"></a></li>
-            </ul>
+            <div id="ResponsiveExternalLinks">
+                <ul>
+                    <li><a href="http://kernel.org"><img src="./img/linux.gif" height="31" width="88"></a></li>
+                    <li><a href="http://www.acme.com/software/thttpd"><img class="responsiveExternalLink" src="./img/thttpd_powered_2.gif" height="31" width="88"></a></li>
+                    <li><a href="http://github.com/hfiref0x/LightFTP"><img src="./img/lightftp.png" height="31" width="88"></a></li>
+                    <li><a href="http://standwithhk.org"><img src="./img/WESTANDWITHHK.PNG" height="31" width="88"></a></li>
+                </ul>
+            </div>
         </div>
     </nav>
     <article>
-        <h1 id="ArticleTitle">O que é o Pindorama?</h1>
+        <h1 class="ArticleTitle">O que é o Pindorama?</h1>
         <p>O Pindorama é um projeto que produz software LIVRE e inteligente, seguindo os princípios de modularidade, simplicidade e sanidade.<br />
 Começou (e ainda é) algo pessoal e hobístico meu e de alguns amigos, entre eles o Caio Novais e Kayo Henrique, que iniciaram o projeto comigo lá por volta do final de Junho de 2019.<br />
 Buscamos manter sanidade e competência como um projeto de código-aberto brasileiro.<br />
 Meus sinceros agradecimentos ao Vitor Souza, que fez o website para mim mais de três vezes <span class="spoiler">(honestamente, ainda prefiro o segundo site à moda "Sun Microsystems" de 2004 do que esse feito em cima do template padrão do werc)</span> e que até hoje me ajuda a manter essa parte.<br />
 <br />
 Não deve-se confundir o nosso Projeto Pindorama com <a href="https://www.pucsp.br/pindorama">"o outro Projeto Pindorama" da PUC de São Paulo</a>, que visa incluir indígenas em universidades.</p>
-        <h1 id="ArticleTitle">Jornal dos Pindoramas</h1>
+        <h1 class="ArticleTitle">Jornal dos Pindoramas</h1>
         <div id="pArticle">
         </div>
     </article>
