Adição de favicon em todas as páginas

--- a/404.html
+++ b/404.html
@@ -4,6 +4,7 @@
      <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <title>404 Not Found</title>
+     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
    </head>
     <body style="background-color: #cc9999;">
       <h2>404 Not Found</h2>
